# krayne

./: .gitignore  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: DESIGN.md  architecture.md  cli.md  configuration.md  errors.md  getting-started.md  index.md  robots.txt  sdk.md
docs/guide/: configuration.md  core-concepts.md  creating-clusters.md  error-handling.md  interactive-tui.md  managing-clusters.md  overview.md  quickstart.md  sandbox.md
docs/overrides/: main.html
docs/reference/: cli.md  configuration.md  errors.md  sdk.md
docs/stylesheets/: extra.css
scripts/: capture_cli_screenshots.py  capture_tui_demo.py
src/krayne/: __init__.py  errors.py  tunnel.py
src/krayne/api/: __init__.py  clusters.py  types.py
src/krayne/cli/: app.py  clusters.py  sandbox.py  tunnel.py
src/krayne/config/: __init__.py  loader.py  models.py  settings.py
src/krayne/kube/: __init__.py  client.py  manifest.py
src/krayne/output/: __init__.py  formatters.py
src/krayne/sandbox/: __init__.py  manager.py
src/krayne/tui/: __init__.py  app.py  commands.py  entry.py  state.py
src/krayne/tui/screens/: _base.py  _detail_tabs.py  cluster_detail.py  cluster_list.py  create_flow.py  create_form.py  delete_confirm.py  detail.py  explorer.py  help.py  help_overlay.py  namespace_input.py  namespace_picker.py  scale_flow.py  scale_form.py
src/krayne/tui/styles/: ikrayne.tcss
src/krayne/tui/widgets/: __init__.py  cluster_table.py  filter_bar.py  header.py  preview_panel.py  service_row.py  status_bar.py
src/prism/: __init__.py  _async_utils.py  _parallel.py  errors.py  tunnel.py
src/prism/api/: __init__.py  clusters.py  types.py
src/prism/cli/: app.py
src/prism/config/: __init__.py  loader.py  models.py  settings.py
src/prism/kube/: __init__.py  client.py  manifest.py
src/prism/output/: __init__.py  formatters.py
src/prism/sandbox/: __init__.py  manager.py
tests/integration/: conftest.py  test_cluster_lifecycle.py  test_services_and_tunnel.py  test_services_disabled.py
tests/manual/: diag_terminal_mode.py  repro_create_flow_bug.py
tests/unit/: conftest.py  test_api.py  test_cli.py  test_config.py  test_errors.py  test_manifest.py  test_sandbox.py  test_settings.py  test_tui.py  test_tunnel.py
