[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-sdk"
version = "0.1.0"
description = "CLI and SDK for creating, managing, and scaling Ray clusters on Kubernetes"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9,<1",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "kubernetes>=28,<32",
    "pyyaml>=6,<7",
]

[project.scripts]
prism = "prism.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-timeout>=2",
]
integration = [
    "testcontainers>=4,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
