[project]
name = "prism-sdk"
version = "0.1.0"
description = "CLI and SDK for creating, managing, and scaling Ray clusters on Kubernetes"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9,<1",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "kubernetes>=28,<32",
    "pyyaml>=6,<7",
    "questionary>=2,<3",
    "tenacity>=8,<10",
]

[project.scripts]
prism = "prism.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-timeout>=2",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "prism"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
